--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "squepis",
-  "version": "0.0.1",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@ant-design/compatible": "^1.0.8",
@@ -16,6 +16,7 @@
     "app-redux": "^2.0.3",
     "axios": "^0.21.1",
     "connected-react-router": "^6.8.0",
+    "cpf-cnpj-validator": "^1.0.3",
     "d3-scale": "^3.2.3",
     "draftjs-to-html": "^0.9.1",
     "firebase": "^8.2.3",
